Use SAAS Template from Neobrutalism

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --main: #3ae071;
+  --main: #3ce1aa;
   --overlay: rgba(0, 0, 0, 0.8);
   /* background color overlay for alert dialogs, modals, etc. */
 
